[gd_scene load_steps=7 format=2]

[ext_resource path="res://timer_label.gd" type="Script" id=1]
[ext_resource path="res://current_time_label.gd" type="Script" id=2]
[ext_resource path="res://fonts/xolonium/Xolonium.tres" type="DynamicFont" id=3]
[ext_resource path="res://circles/circle-gray.png" type="Texture" id=4]
[ext_resource path="res://circles/circle-blue.png" type="Texture" id=5]
[ext_resource path="res://circles/circle-white.png" type="Texture" id=6]

[node name="main" type="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress_circle" type="TextureProgress" parent="."]
margin_left = 48.0
margin_top = 14.0
margin_right = 560.0
margin_bottom = 526.0
rect_scale = Vector2( 0.4, 0.4 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inner_circle" type="TextureProgress" parent="."]
margin_left = 58.5939
margin_top = 24.913
margin_right = 570.594
margin_bottom = 536.913
rect_scale = Vector2( 0.36, 0.36 )
texture_under = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_time_label" type="Label" parent="."]
margin_left = 113.0
margin_top = 86.0
margin_right = 271.0
margin_bottom = 125.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.988235, 0.0235294, 0.0235294, 1 )
text = "00:00:00"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_label" type="Label" parent="."]
margin_left = 60.0
margin_top = 106.0
margin_right = 244.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00:00:00"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="btn_start" type="Button" parent="."]
margin_left = 32.0
margin_top = 262.0
margin_right = 101.0
margin_bottom = 284.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_pause" type="Button" parent="."]
margin_left = 120.0
margin_top = 262.0
margin_right = 189.0
margin_bottom = 284.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_reset" type="Button" parent="."]
margin_left = 208.0
margin_top = 262.0
margin_right = 277.0
margin_bottom = 284.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btn_start" to="timer_label" method="_on_btn_start_pressed"]
[connection signal="pressed" from="btn_pause" to="timer_label" method="_on_btn_pause_pressed"]
[connection signal="pressed" from="btn_reset" to="timer_label" method="_on_btn_reset_pressed"]
